[gd_scene load_steps=37 format=2]

[ext_resource path="res://src/GameScene/Game/VRPlayer/Controller/Oculus Touch for Quest 2/left_joy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/GameScene/Game/Room/testPoolRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/GameScene/Game/Cuestick/CueStickModel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GameScene/Game/VRPlayer/VRPlayer.gd" type="Script" id=4]
[ext_resource path="res://src/GameScene/Game/VRPlayer/Controller/Oculus Touch for Quest 2/right_joy.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/GameScene/Game/Game.gd" type="Script" id=6]
[ext_resource path="res://src/GameScene/Game/PoolTable/tableWood.tres" type="Material" id=7]
[ext_resource path="res://src/GameScene/Game/VRPlayer/Controller/Controller.gd" type="Script" id=8]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.423529, 0.423529, 0.423529, 0.427451 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("CeilingCameraView")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[sub_resource type="PlaneMesh" id=5]
resource_local_to_scene = true
material = SubResource( 4 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("VRPlayer/LeftController/MeshInstance/Debug")

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
albedo_texture = SubResource( 6 )

[sub_resource type="PlaneMesh" id=8]
resource_local_to_scene = true
material = SubResource( 7 )

[sub_resource type="PhysicsMaterial" id=9]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="VisualShaderNodeColorConstant" id=11]
constant = Color( 0.0321655, 0.132813, 0, 1 )

[sub_resource type="VisualShader" id=12]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Color:2
	vec3 n_out2p0 = vec3(0.032166, 0.132813, 0.000000);
	float n_out2p1 = 1.000000;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -39, 117 )
nodes/fragment/0/position = Vector2( 740, 120 )
nodes/fragment/2/node = SubResource( 11 )
nodes/fragment/2/position = Vector2( 60, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )

[sub_resource type="ConcavePolygonShape" id=14]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="PhysicsMaterial" id=15]
friction = 0.0
rough = true
bounce = 0.9

[sub_resource type="CubeMesh" id=16]

[sub_resource type="ConcavePolygonShape" id=17]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ConcavePolygonShape" id=18]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=19]

[sub_resource type="ConcavePolygonShape" id=20]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ConcavePolygonShape" id=21]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CylinderMesh" id=22]
top_radius = 0.08
bottom_radius = 0.08
height = 0.523

[sub_resource type="BoxShape" id=23]
extents = Vector3( 0.208565, 0.202354, 0.205906 )

[sub_resource type="PlaneMesh" id=24]

[sub_resource type="ViewportTexture" id=25]
viewport_path = NodePath("HUD/GUI")

[sub_resource type="SpatialMaterial" id=26]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 25 )

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0.0313726, 0.0117647, 0.0117647, 1 )

[sub_resource type="CylinderShape" id=28]
radius = 0.0154764
height = 1.59189

[node name="Game" type="Spatial"]
script = ExtResource( 6 )
debug = false

[node name="Target" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.59526, 0 )
radius = 0.005
material = SubResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="Target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.17245, 0 )
radius = 0.005
height = 6.35
cone = true
material = SubResource( 2 )

[node name="CeilingCameraView" type="Viewport" parent="."]
size = Vector2( 500, 500 )
transparent_bg = true
hdr = false
gui_disable_input = true

[node name="CeilingCamera" type="Camera" parent="CeilingCameraView"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.412, 0 )
projection = 1
current = true
size = 6.88
far = 1.7

[node name="World" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.18757, 0.183929, -0.067548 )
visible = false

[node name="testPoolRoom" parent="World" instance=ExtResource( 2 )]
transform = Transform( 1.99664, 0, 0, 0, 1.39, 0, 0, 0, 2.01581, -0.149046, -0.321018, 0.00557729 )

[node name="VRPlayer" type="ARVROrigin" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -2.17146, -0.0969372, -0.473 )
script = ExtResource( 4 )

[node name="VRCamera" type="ARVRCamera" parent="VRPlayer"]

[node name="LeftController" type="ARVRController" parent="VRPlayer"]
script = ExtResource( 8 )

[node name="leftJoy" parent="VRPlayer/LeftController" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )

[node name="CeilingView" type="MeshInstance" parent="VRPlayer/LeftController"]
transform = Transform( 0.0150897, 0.0981047, 0.0121554, -0.00242612, 0.01266, -0.0991657, -0.0988251, 0.0146689, 0.00429049, -5.96046e-08, 0.15289, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="VRPlayer/LeftController"]
transform = Transform( 0.00781782, 0.935112, 0.00642371, 0, 0.0541361, -0.0220105, -0.0501936, 0.748043, 0.00513864, 0, 0.23493, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="Debug" type="Viewport" parent="VRPlayer/LeftController/MeshInstance"]
size = Vector2( 50, 50 )
render_target_v_flip = true

[node name="Label" type="Label" parent="VRPlayer/LeftController/MeshInstance/Debug"]
margin_right = 40.0
margin_bottom = 14.0
text = "foo"

[node name="RightController" type="ARVRController" parent="VRPlayer"]
controller_id = 2
script = ExtResource( 8 )

[node name="rightJoy" parent="VRPlayer/RightController" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )

[node name="CueStick" type="Position3D" parent="VRPlayer/RightController"]
transform = Transform( 0.968924, -0.181478, 0.168083, -0.00215051, 0.673306, 0.739361, -0.247348, -0.716746, 0.651992, -0.010075, 0.0570783, 0.00148129 )

[node name="PoolTable" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.864918, 0 )

[node name="PoolTableMat" type="StaticBody" parent="PoolTable"]
collision_mask = 7
physics_material_override = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="PoolTable/PoolTableMat"]
transform = Transform( 2.54, 0, 0, 0, 0.1, 0, 0, 0, 1.27, 0, 0, 0 )
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="PoolTable/PoolTableMat"]
transform = Transform( 2.54, 0, 0, 0, 0.1, 0, 0, 0, 1.27, 0, 0, 0 )
shape = SubResource( 14 )

[node name="PoolTableBorders" type="StaticBody" parent="PoolTable"]
collision_mask = 7
physics_material_override = SubResource( 15 )

[node name="LeftMesh" type="MeshInstance" parent="PoolTable/PoolTableBorders"]
transform = Transform( 0.14, 0, 0, 0, 0.06, 0, 0, 0, 1.27, 2.678, 0.16, 0 )
mesh = SubResource( 16 )
material/0 = ExtResource( 7 )

[node name="LeftCollision" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 0.14, 0, 0, 0, 0.06, 0, 0, 0, 1.27, 2.678, 0.16, 0 )
shape = SubResource( 17 )

[node name="RightMesh" type="MeshInstance" parent="PoolTable/PoolTableBorders"]
transform = Transform( 0.14, 0, 0, 0, 0.06, 0, 0, 0, 1.27, -2.678, 0.16, 0 )
mesh = SubResource( 16 )
material/0 = ExtResource( 7 )

[node name="RightCollision" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 0.14, 0, 0, 0, 0.06, 0, 0, 0, 1.27, -2.678, 0.16, 0 )
shape = SubResource( 18 )

[node name="UpLeftMesh" type="MeshInstance" parent="PoolTable/PoolTableBorders"]
transform = Transform( 2.54, 0, 0, 0, 0.06, 0, 0, 0, 0.14, 0, 0.16, 1.409 )
mesh = SubResource( 19 )
material/0 = ExtResource( 7 )

[node name="UpLeftCollision" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 2.54, 0, 0, 0, 0.06, 0, 0, 0, 0.14, 0, 0.16, 1.409 )
shape = SubResource( 20 )

[node name="DownLeftMesh" type="MeshInstance" parent="PoolTable/PoolTableBorders"]
transform = Transform( 2.54, 0, 0, 0, 0.06, 0, 0, 0, 0.14, 0, 0.16, -1.409 )
mesh = SubResource( 19 )
material/0 = ExtResource( 7 )

[node name="DownLeftCollision" type="CollisionShape" parent="PoolTable/PoolTableBorders"]
transform = Transform( 2.54, 0, 0, 0, 0.06, 0, 0, 0, 0.14, 0, 0.16, -1.409 )
shape = SubResource( 21 )

[node name="HoleDownMesh" type="MeshInstance" parent="PoolTable/PoolTableBorders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.35758 )
mesh = SubResource( 22 )
material/0 = null

[node name="Balls" type="Spatial" parent="."]

[node name="WhiteBall" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.486431, -0.868246, 0.0976435, -0.371336, -0.104281, 0.922624, -0.790882, -0.485052, -0.373136, 0, 4.12346, 0 )
shadow_enabled = true
shadow_bias = -0.02

[node name="Ground" type="Area" parent="."]
transform = Transform( 400.711, 0, 0, 0, -41.9619, 0, 0, 0, 193.443, 0, -8.68345, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 23 )

[node name="HUD" type="MeshInstance" parent="."]
transform = Transform( 5.9503e-08, 0.431639, 1.50755e-08, -1.19006e-07, 6.44641e-08, -1.17837, -1.36127, 1.88675e-08, 1.03016e-07, -4.74938, 1.58067, 0.0647986 )
mesh = SubResource( 24 )
material/0 = SubResource( 26 )

[node name="GUI" type="Viewport" parent="HUD"]
size = Vector2( 64, 64 )
hdr = false
usage = 1
render_target_v_flip = true

[node name="Label" type="Label" parent="HUD/GUI"]
margin_right = 40.0
margin_bottom = 14.0
text = "Player 1 turn"

[node name="WhiteBallCenter" type="CSGTorus" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.337102, 1.40514, -0.468323 )
visible = false
inner_radius = 0.0574119
outer_radius = 0.0540073
sides = 32
material = SubResource( 27 )

[node name="CueStick" parent="." instance=ExtResource( 3 )]

[node name="Area" type="Area" parent="CueStick"]

[node name="CollisionShape" type="CollisionShape" parent="CueStick/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.796598, 0 )
shape = SubResource( 28 )

[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
